# autoresearch-inference-optimization

./: .gitignore  CLAUDE.md  README.md  RESULTS.md  benchmark.py  bot.py  chat_template.jinja  engine.py  experiment.yaml  experiments.jsonl  gemma4-35b-base-with-throughput.csv  prepare.py  pyproject.toml  remote.py  serve.sh  tracker.py  user_config.yaml
bench/: bench_serving.py
docs/: README.md  architecture.md  optimization_log.md
docs/gemma-4-31B/: vllm_recipe.md
experiments/: 0001_4d53397a818a0eee.sh  0001_71a1aa3b7f48941d.json  0001_725d8a72bb3ad4b8.sh  0001_7e72b68fc37acefd.csv  0001_7e72b68fc37acefd.sh  0002_540e9528e7016d6f.sh  0002_ad0787fe116c6625.sh  0002_d7f71a8f9bbad8f1.json  0002_d7f71a8f9bbad8f1.sh  0002_df524e2baf20a979.sh  0002_eee62cbd6f383f0a.sh  0003_0062f35a1da8d53b.csv  0003_0062f35a1da8d53b.sh  0003_336563424b332d27.sh  0003_3e46f05f52154bda.sh  0003_492c55330cd796ec.json  0003_701e9f9ec0286f9f.sh  0004_16f9739e790c7287.json  0004_16f9739e790c7287.sh  0004_3f8f0e8ffb9842a8.sh  0004_6db4c77ff07080e7.sh  0004_82c97211ddafaee2.csv  0004_82c97211ddafaee2.sh  0005_22dfe9390238cac5.json  0005_70a57ebc4dcfedca.csv  0005_70a57ebc4dcfedca.sh  0005_73c98468eb4cb49b.sh  0005_785430771b52cb5a.sh  0006_33b9e4c1f694fc0c.sh  0006_359809a9e5e862f0.sh  0006_5684fb5aff77c13c.csv  0006_5684fb5aff77c13c.sh  0006_d9b65482e124f7ae.json  0006_d9b65482e124f7ae.sh  0007_6363286c583f342b.sh  0007_70f6c474e01f223a.json  0007_70f6c474e01f223a.sh  0007_7cb0fc7f904ffdda.sh  0007_fc7f0d91058b4647.csv  0007_fc7f0d91058b4647.sh  (+124 more)
